--- a/management/templates/management/add_items.html
+++ b/management/templates/management/add_items.html
@@ -1,7 +1,7 @@
 {% extends 'management/base.html' %}
 {% load crispy_forms_tags %}
 {% block title%}
-	 Add Book
+	 Create
 {% endblock %}
 
 {% block active_Books %}  active  {% endblock %}
