--- a/management/templates/management/list_history.html
+++ b/management/templates/management/list_history.html
@@ -71,10 +71,10 @@
                           <td>{{instance.issue_by}}</td>
                           <td>{{instance.issue_to}}</td>
                           <td>GH&#8373;{{instance.issue_cost}}</td>
-                          <td>{{instance.amount_paid}}</td>
+                          <td>&#8373;{{instance.amount_paid}}</td>
                           <td>{{instance.receive_by}}</td>
                           <td>{{instance.receive_from}}</td>
-                          <td>{{instance.receive_cost}}</td>
+                          <td>&#8373;{{instance.receive_cost}}</td>
                       </tr>
 
                   {% empty %}
