--- a/management/templates/management/add_items.html
+++ b/management/templates/management/add_items.html
@@ -18,7 +18,7 @@
                	{% csrf_token %}
                 	<div class="card">
                   		<div class="card-header">
-                    	<h4>Add Book</h4>
+                    	<h4>Create</h4>
                   	</div>
                   	<div class="card-body">
                     <div class="form-group">
