--- a/management/templates/management/index.html
+++ b/management/templates/management/index.html
@@ -10,39 +10,100 @@
         <section class="section">
 
            <div class="row">
-              <h2>Excellence Publication And Stationery Limited.</h2><br>
+              <h2>EXCELLENCE PUBLICATION AND STATIONERY LIMITED</h2><br>
            </div> 
 
             <div class="row">
-                <h4 style="color:blue">Welcome {{user.username}}</h4>
+                <h4 style="color:blue">Hi! {{user.username}}</h4>
             </div>
             
           <div class="row ">
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div class="card">
-                <div class="card-statistic-4">
-                  <div class="align-items-center justify-content-between">
-                    <div class="row ">
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
-                        <div class="card-content">
-                          <h5 class="font-15">Total Books in Store</h5>
-                          <h2 class="mb-3 font-25 col-green">
-                            {% for stock in stocks %} 
-                              {% if forloop.last %}    
-                                {{forloop.counter}}
-                              {% endif %}
-                            {% endfor %}</h2>
+              <a href="{% url 'management:list_items' %}">
+                <div class="card">
+                  <div class="card-statistic-4">
+                    <div class="align-items-center justify-content-between">
+                      <div class="row ">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
+                          <div class="card-content">
+                            <h5 class="font-15">Total Books in Store</h5>
+                            <h2 class="mb-3 font-25 col-green">
+                              {% for stock in stocks %} 
+                                {% if forloop.last %}    
+                                  {{forloop.counter}}
+                                {% endif %}
+                              {% endfor %}</h2>
+                          </div>
                         </div>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
-                        <div class="banner-img">
-                          <img src="{% static 'assets/img/banner/1.png' %}" alt="">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                          <div class="banner-img">
+                            <img src="{% static 'assets/img/banner/1.png' %}" alt="">
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
+            </a>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+              <a href="{% url 'management:list_customers' %}">
+                <div class="card">
+                  <div class="card-statistic-4">
+                    <div class="align-items-center justify-content-between">
+                      <div class="row ">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
+                          <div class="card-content">
+                            <h5 class="font-15"> Total Customers</h5>
+                            <h2 class="mb-3 font-25 col-orange">
+                              {% for customer in customers %} 
+                                {% if forloop.last %}    
+                                  {{forloop.counter}}
+                                {% endif %}
+                              {% endfor %}
+                            </h2>
+                            
+                          </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                          <div class="banner-img">
+                            <img src="{% static 'assets/img/banner/2.png' %}" alt="">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
+              <a href="{% url 'management:list_categories' %}">
+                <div class="card">
+                  <div class="card-statistic-4">
+                    <div class="align-items-center justify-content-between">
+                      <div class="row ">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
+                          <div class="card-content">
+                            <h5 class="font-15">Categories of Books</h5>
+                            <h2 class="mb-3 font-25 col-green">
+                              {% for category in categories %} 
+                                {% if forloop.last %}    
+                                  {{forloop.counter}}
+                                {% endif %}
+                              {% endfor %}
+                            </h2>
+                          </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
+                          <div class="banner-img">
+                            <img src="{% static 'assets/img/banner/3.png' %}" alt="">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </a>
             </div>
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
               <div class="card">
@@ -51,62 +112,7 @@
                     <div class="row ">
                       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
                         <div class="card-content">
-                          <h5 class="font-15"> Total Customers</h5>
-                          <h2 class="mb-3 font-25 col-orange">
-                            {% for customer in customers %} 
-                              {% if forloop.last %}    
-                                {{forloop.counter}}
-                              {% endif %}
-                            {% endfor %}
-                          </h2>
-                          
-                        </div>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
-                        <div class="banner-img">
-                          <img src="{% static 'assets/img/banner/2.png' %}" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div class="card">
-                <div class="card-statistic-4">
-                  <div class="align-items-center justify-content-between">
-                    <div class="row ">
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
-                        <div class="card-content">
-                          <h5 class="font-15">Categories of Books</h5>
-                          <h2 class="mb-3 font-25 col-green">
-                            {% for category in categories %} 
-                              {% if forloop.last %}    
-                                {{forloop.counter}}
-                              {% endif %}
-                            {% endfor %}
-                          </h2>
-                        </div>
-                      </div>
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pl-0">
-                        <div class="banner-img">
-                          <img src="{% static 'assets/img/banner/3.png' %}" alt="">
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12">
-              <div class="card">
-                <div class="card-statistic-4">
-                  <div class="align-items-center justify-content-between">
-                    <div class="row ">
-                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 pr-0 pt-3">
-                        <div class="card-content">
-                          <h5 class="font-15">Total Number of Users</h5>
+                          <h5 class="font-15">Number of Users</h5>
                           <h5 class="mb-3 font-25 col-red">
                           {% for i in users %} 
                               {% if forloop.last %}    
