--- a/register/templates/registration/password_reset_complete.html
+++ b/register/templates/registration/password_reset_complete.html
@@ -27,24 +27,30 @@
           <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
             <div class="card card-primary">
               <div class="card-header">
-                <h4>Login</h4>
+                <h4>Mail Sent</h4>
               </div>
               <div class="card-body">
-                <form method="POST" action="#" class="needs-validation" novalidate="">
-                  <div class="form-group">
-                       {% csrf_token %}
-                      {{ form|crispy }}  
-                    
-                  </div>
-                                    
-                  <div class="form-group">
-                    <a href="/password_reset">Forgot Password?</a><br><br>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
-                      Login
-                    </button>
-                                        
-                  </div>
-                </form>
+                {% if validlink %}
+                    <form method="POST" action="">
+                      {% csrf_token %}
+                      {{ form|crispy }}
+
+                      
+                    </form>
+                    {% else %}
+                    <form>
+                      <p>
+                        Your password has been set. You may go ahead and <a href="/login">sign in</a> now.
+                      </p>
+                      <div class="form-footer">
+                        <a href="/login">
+                        <button style="background: blue; color: white;padding: 3px 6px" type="button" class="btn btn-outline-primary-2">
+                                <span>login</span>
+                            </button>
+                        </a>    
+                      </div><!-- End .form-footer -->
+                    </form>
+                    {% endif %}
                 <div class="text-center mt-4 mb-3">
                   <div class="text-job text-muted">STOCK MANAGEMENT - DATABASE</div>
                 </div>
@@ -72,3 +78,5 @@
 
 <!-- auth-login.html  21 Nov 2019 03:49:32 GMT -->
 </html>
+
+
