--- a/register/templates/registration/password_reset_confirm.html
+++ b/register/templates/registration/password_reset_confirm.html
@@ -27,7 +27,7 @@
           <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
             <div class="card card-primary">
               <div class="card-header">
-                <h4>Login</h4>
+                <h4>Create Password</h4>
               </div>
               <div class="card-body">
                 <form method="POST" action="#" class="needs-validation" novalidate="">
@@ -38,11 +38,10 @@
                   </div>
                                     
                   <div class="form-group">
-                    <a href="/password_reset">Forgot Password?</a><br><br>
                     <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
-                      Login
+                      Set Password
                     </button>
-                                        
+                    
                   </div>
                 </form>
                 <div class="text-center mt-4 mb-3">
@@ -51,6 +50,11 @@
                 
               </div>
             </div>
+            <style>
+              #hint_id_new_password1{
+                display: none;
+              }
+            </style>
             <div class="mt-5 text-muted text-center">
               Copyright &copy; <script>document.write(new Date().getFullYear());</script> Excellence Publication and Stationery Limited.</a>
             </div>
