--- a/register/templates/registration/password_reset_done.html
+++ b/register/templates/registration/password_reset_done.html
@@ -27,23 +27,23 @@
           <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
             <div class="card card-primary">
               <div class="card-header">
-                <h4>Login</h4>
+                <h4>Mail Sent</h4>
               </div>
               <div class="card-body">
                 <form method="POST" action="#" class="needs-validation" novalidate="">
                   <div class="form-group">
-                       {% csrf_token %}
-                      {{ form|crispy }}  
+                    <p>
+                We've emailed you instructions for setting your password, if an account exists with the email you entered.
+                You should receive them shortly.
+                </p>
+                                            <p>
+                If you don't receive an email, please make sure you've entered the address you registered with,
+            and check your spam folder.
+                                            </p>                      
                     
                   </div>
                                     
-                  <div class="form-group">
-                    <a href="/password_reset">Forgot Password?</a><br><br>
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
-                      Login
-                    </button>
-                                        
-                  </div>
+                  
                 </form>
                 <div class="text-center mt-4 mb-3">
                   <div class="text-job text-muted">STOCK MANAGEMENT - DATABASE</div>
@@ -72,3 +72,5 @@
 
 <!-- auth-login.html  21 Nov 2019 03:49:32 GMT -->
 </html>
+
+
